Added post for week 3

--- a/_posts/2015-8-30-Week-1-Post.md
+++ b/_posts/2015-8-30-Week-1-Post.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 1
 ---
 
-Hi Everyone,
+Namaste,
 
 I am Kaivan and I will posting about my experience of attending the CS 371p class every week this semester. I am a transfer student and really excited to attebd UT fall 2015. Before joining I had to give to two transfer credit exams: CS429 and CS 311 respectively. I was able to clear CS 429 and hence, I got a chance to register for OOP.
 
