--- a/_posts/2015-9-27-Week-5-Post.md
+++ b/_posts/2015-9-27-Week-5-Post.md
@@ -1,1 +1,18 @@
-hi
+---
+layout: post
+title: Week 5
+---
+
+Namaste,
+
+Into the fourth week of Object Oriented Programming. Highlights of the week:
+1. Project Voting due.
+2. HackTX.
+
+Project Voting took me and my partner longer than we expected and we could not make our code more optimized which kind of sucked. We thought we were so close and yet so far. Went through a lot of process of debugging but could not figure it until the end. I wish we had not taken the project lightly once we had a working solution. Lesson learned for next project.
+
+HackTX. Shout out to the team for such an awesome event. About 500 attendees with 50 projects created and I can tell each one of them was awesome! I was so overwhelmed looking at the projects. It was mind = blown. One of the project had created a computer vision - machine learning application which would take a group of images and classify the common link between them. Pretty cool right? The team that I was a part of was working on Oculo - Myo - Kinecto Music Hero. We wanted to map the pressure points of our fingers using myo armband, hand movements for string using kinect and oculus for the gaming environment. But we ended up having a conflict integrating myo and oculus. The final project we submitted was music hero with oculus. I learned a lot and it was a great experience. Waiting for HackTX next year and few other hackathons that are going to come up during this fall.
+
+Shukriya.
+
+Tip of the Week: Attend as many Hackathons as you can. You learn so much in 24hrs that you never expected to put your hands on. And try to build something, just do not give up. Give it your all, get out of your comfort zone and try to be creative with whatever you can. I am sure it will be an experience to remember!
