--- a/_posts/2015-10-12-Week-7-Post.md
+++ b/_posts/2015-10-12-Week-7-Post.md
@@ -5,6 +5,18 @@ title: Week 7
 
 Namaste,
 
+Into the sixth week of Object Oriented Programming. Highlights of the week:
+1. Exam 1!
+2. No class on Friday
+3. Grades for Project #2
+4. TAMUhack
+
+I was super tensed for how the test was going to be this week. I knew the questions were pretty much going to be like they were in class, writing functions. But I was still tensed since it is a pretty big chunk of the grade. There was nothing outside of what Downing had taught us. Iterators and palindrome sums up the test pretty much. I felt the test was medium level difficulty. Hopefully I did well.
+
+No class on Friday. A small break from the hectic week which felt nice. Grades for project #2 came up and it was pretty low. I felt the TA's made a mistake with our project grading. I sent them an email and got a reponse pretty quickly. Upon meeting them they were able to rectify the mistake and the a tragedy had been averted.
+
+I attended TAMUHack this weekend. And it was a lot of fun. Alot of cool projects were built by the teams. Few of the notable mentions: Proxy Chat, Doom-Matrix mashup Oculus game, and PathFinder(winner). Me and my partner we made an app called RecipeBuddy which took a name of the recipe and using a Recipe api we extracted the ingredients required for the recipe. Then we used the Walmart api to feed in our data/ingredients which resulted in a list of ingredients along the prices and total. One could then place an order to the walmart online which would be ready to be picked by the customer. I enjoyed TamuHack and I am planning to attend few other hackathons this year. That is all. I will see you all next week.
+
 Shukriya.
 
-Tip of the Week:
+Tip of the Week: I feel one should attend as many hackathons as they can. One can learn at an exponential rate in these 24 hours.
