--- a/_posts/2015-10-19-Week-8-Post.md
+++ b/_posts/2015-10-19-Week-8-Post.md
@@ -10,7 +10,12 @@ Into the eighth week of Object Oriented Programming. Highlights of the week:
 2. Project #3
 3. Grade for Test 1
 
+This week we learned how allocators work. Monday’s lecture delved into the details of the project and what will be required to complete the project (construct, destruct, allocate, deallocate, index and extra things of our choosing). Now we can choose to allow even the standard vector class to use our custom allocator rather than the default built-in one.
+
+In this project, we are asked to build an allocator that will decide on memory space (allocation and destruction/freeing). We have sentinnels to inform us about the available/used us memory size in the allocator. We use a char array to represent memory as it is conventional and we can access each byte since a char takes one byte in the memory. I have a lab partner for this project and we have not been able to meet up as many times we have wanted due to our time conflict. We have been able to implement valid(), Allocator() and allocate() done. Now all we need to do is implement deallocate which to me seems the toughest. Hopefully we can figure it out.
+
+Grades for test 1 are out and I think I did OK. I could have done better. Now that I know how his tests are and if he maintains the same format, I should be able to perform better than I did. I also need to start doing good on quizzes as I cannot mess up on them.
 
 Shukriya.
 
-Tip of the Week: Do not procrastinate
+Tip of the Week: Money2020 hackathon is this weekend in LAS VEGAS and they reimburse upto $250 if you present a project. The event seems pretty huge with a lot of big prizes. If you can do attend this hackathon. Also, on the plus side you get to go VEGAS. The air tickets are pretty cheap and you can find a cheap stay for one night pretty much anywhere in vegas. I am excited for the event.
