--- a/_posts/2015-11-16-Week-12-Post.md
+++ b/_posts/2015-11-16-Week-12-Post.md
@@ -6,10 +6,13 @@ title: Week 12
 Namaste,
 
 Into the twelfth week of Object Oriented Programming. Highlights of the week:
-1. Darwin is due
-2. New project - Life
+1. Life
+2. Atlassian talk
 
+This week into our first class we continued our discussion of Shapes and Circles and the required inheritance. The next class we talked about project Life and the implementation of its design. And then we had Atlassian employess come in and talk about their product.
 
-Shukriya.
+Let us talk about Life! If we fail to do this project do we fail at Life :O. Me and my partner knew that this project is going to take the longest time so we started working on it from Wednesday. We have had a few roadblocks and our implementation of the design seems somewhat wrong since our AbstractCell is not completely abstract. We need to define a purely virtual method to make AbstractCell completely abstract. The way conway cells and the fredkin cells work and their transition is confusing. The important thing I learned is that Fredkin cells can get converted to Conway Cell but not vice versa. Life looks similar to Darwin but it has the spice of inheritance added to it. Hopefully me and my partner will be able to finish it on time.
 
 Tip of the Week: Github only provides 5 private repos. Bitbucket is a better option with unlimited private repos. So if you ever run out of private repos on github do not worry, you have bit bucket! :D
+
+Shukriya.
